Fix the way multiple members are displayed (#1)
This PR:

- Fixes how images that are not cropped to be square are displayed
- Fixes spacing between multiple lab members
- Fixes an unrelated warning in `poetry install`

--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,7 @@
     --border-color: #ddd;
     --font-size: 18px;
     --line-height: 1.8;
+    --member-photo-size: 180px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -105,18 +106,21 @@ footer {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    margin: 12px 0;
 }
 
 .member-list .member-item .member-photo {
-    flex-basis: 180px;
+    width: var(--member-photo-size, 180px);
+    height: var(--member-photo-size, 180px);
     overflow: hidden;
-    display: flex;
-    align-items: center;
+    border-radius: 50%;
+    border: 1px solid var(--border-color);
+    background-size: cover;
+    background-position: center;
 }
 
 .member-list .member-item .member-photo img {
-    border-radius: 50%;
-    border: 1px solid var(--border-color);
+    opacity: 0;
 }
 
 .member-list .member-item .member-info {
@@ -216,6 +220,7 @@ footer {
     :root {
         --font-size: 15px;
         --line-height: 1.5;
+        --member-photo-size: 80px;
     }
 
     main {
@@ -251,10 +256,6 @@ footer {
     
     h1 {
         margin-top: 32px;
-    }
-
-    .member-list .member-item .member-photo {
-        flex-basis: 80px;
     }
 
     .member-list .member-item .member-name {
